@@ -11,17 +11,21 @@
   <artifactId>test-avaje-nima</artifactId>
 
   <properties>
-    <!--    <java.release>19</java.release>-->
-    <!--    <maven.compiler.source>19</maven.compiler.source>-->
-    <!--    <maven.compiler.target>19</maven.compiler.target>-->
-    <!--    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>-->
     <surefire.useModulePath>false</surefire.useModulePath>
-    <record.builder.version>37</record.builder.version>
   </properties>
-
 
   <dependencies>
 
+    <dependency>
+      <groupId>ch.qos.logback</groupId>
+      <artifactId>logback-classic</artifactId>
+      <version>1.4.8</version>
+    </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-jdk-platform-logging</artifactId>
+      <version>2.0.9</version>
+    </dependency>
     <dependency>
       <groupId>io.avaje</groupId>
       <artifactId>avaje-metrics</artifactId>
@@ -90,14 +94,6 @@
         </executions>
       </plugin>
 
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <version>3.0.0</version>
-        <configuration>
-          <argLine>--enable-preview</argLine>
-        </configuration>
-      </plugin>
 
       <plugin>
         <groupId>io.repaint.maven</groupId>
